--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -174,11 +174,11 @@ td {
   height: 200px;
   width: 100%;
   margin-bottom: 25px;
-  background-image: url("../../assets/images/02-hero-bg.jpg");
+  background-image: url("../../assets/images/rapeseed.jpg");
   background-size: cover;
   background-position: center;
   /* background-color: #003780a1; */
-  /* filter: sepia(100%) hue-rotate(190deg) saturate(500%); */
+  filter: sepia(100%) hue-rotate(190deg) saturate(500%);
 }
 
 .hero-banner div {
