--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -174,7 +174,7 @@ td {
   height: 200px;
   width: 100%;
   margin-bottom: 25px;
-  background-image: url("../../assets/images/rapeseed.jpg");
+  background-image: url("../../../assets/images/rapeseed.jpg");
   background-size: cover;
   background-position: center;
   /* background-color: #003780a1; */
@@ -203,89 +203,6 @@ td {
   background-color: skyblue;
   color: darkslategray;
   text-align: float-left;
-}
-
-
-/* Category Grid CSS */
-
-#work {
-  /* border-left: 3px solid darkslategray; */
-  padding-right: 100px;
-  display: grid;
-  grid-template-rows: 70% 70% 70% 70%;
-  grid-template-columns: 1fr 1fr;
-  gap: 20px;
-  grid-template-areas:
-    "SurfReport SurfReport"
-    "SurfReport SurfReport"
-    "LEDWall Calculator"
-    "PastelPuzzels RunBuddy"
-  ;
-}
-
-#SurfReport:hover {
-  opacity: 1;
-}
-
-#SurfReport {
-  opacity: 0.6;
-  grid-area: SurfReport;
-  background-image: url("../../assets/images/02-portfolio-4.jpg");
-  background-size: cover;
-  background-position: top;
-  border: 5px solid lightblue;
-}
-
-#LEDWall:hover {
-  opacity: 1;
-}
-
-#LEDWall {
-  opacity: 0.6;
-  grid-area: LEDWall;
-  background-image: url("../../assets/images/02-portfolio-1.jpg");
-  background-size: cover;
-  background-position: top;
-  border: 5px solid lightblue;
-}
-
-#Calculator:hover {
-  opacity: 1;
-}
-
-#Calculator {
-  opacity: 0.6;
-  grid-area: Calculator;
-  background-image: url("../../assets/images/02-portfolio-2.jpg");
-  background-size: cover;
-  background-position: top;
-  border: 5px solid lightblue;
-}
-
-#PastelPuzzels:hover {
-  opacity: 1;
-}
-
-#PastelPuzzels {
-  opacity: 0.6;
-  grid-area: PastelPuzzels;
-  background-image: url("../../assets/images/02-portfolio-3.jpg");
-  background-size: cover;
-  background-position: top;
-  border: 5px solid lightblue;
-}
-
-#RunBuddy:hover {
-  opacity: 1;
-}
-
-#RunBuddy {
-  opacity: 0.6;
-  grid-area: RunBuddy;
-  background-image: url("../../assets/images/02-run-buddy.jpg");
-  background-size: cover;
-  background-position: top;
-  border: 5px solid lightblue;
 }
 
 .heading {
