fixed pathway to photos

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -174,7 +174,7 @@ td {
   height: 200px;
   width: 100%;
   margin-bottom: 25px;
-  background-image: url("../../../assets/images/rapeseed.jpg");
+  background-image: url("../../assets/images/rapeseed.jpg");
   background-size: cover;
   background-position: center;
   /* background-color: #003780a1; */
